@@ -109,6 +109,37 @@ badResultMsgs = { 'badUnparsedResult':
     "BonsaiParser did not raise an exception when there was no <ci> tags"
 }
 
+noCheckinMsgResult = """\
+<?xml version="1.0"?>
+<queryResults>
+<ci who="johndoe@domain.tld" date="12345678">
+ <log></log>
+ <files>
+  <f rev="1.1">first/file.ext</f>
+ </files>
+</ci>
+<ci who="johndoe@domain.tld" date="12345678">
+ <log></log>
+ <files>
+  <f rev="1.2">second/file.ext</f>
+ </files>
+</ci>
+<ci who="johndoe@domain.tld" date="12345678">
+ <log></log>
+ <files>
+  <f rev="1.3">third/file.ext</f>
+ </files>
+</ci>
+</queryResults>
+"""
+
+noCheckinMsgRef = [dict(filename="first/file.ext",
+                     revision="1.1"),
+                dict(filename="second/file.ext",
+                     revision="1.2"),
+                dict(filename="third/file.ext",
+                     revision="1.3")]
+
 class FakeBonsaiPoller(BonsaiPoller):
     def __init__(self):
         BonsaiPoller.__init__(self, "fake url", "fake module", "fake branch")
@@ -179,3 +210,16 @@ class TestBonsaiPoller(unittest.TestCase):
         poller._process_changes(badUnparsedResult)
         # self.lastChange will not be updated if the change was not submitted
         self.failUnlessEqual(lastChangeBefore, poller.lastChange)
+
+    def testMergeEmptyLogMsg(self):
+        """Ensure that BonsaiPoller works around the bonsai xml output
+        issue when the check-in comment is empty"""
+        bp = BonsaiParser(noCheckinMsgResult)
+        result = bp.getData()
+        self.failUnlessEqual(len(result.nodes), 1)
+        self.failUnlessEqual(result.nodes[0].who, "johndoe@domain.tld")
+        self.failUnlessEqual(result.nodes[0].date, 12345678)
+        self.failUnlessEqual(result.nodes[0].log, "")
+        for file, ref in zip(result.nodes[0].files, noCheckinMsgRef):
+            self.failUnlessEqual(file.filename, ref['filename'])
+            self.failUnlessEqual(file.revision, ref['revision'])
